--- a/style.css
+++ b/style.css
@@ -1,4 +1,6 @@
 /* Estilo general del cuerpo de la página */
+
+/* HERRERA PACHECO GERARDO ISIDRO ISC 7 "B" */
 body {
     font-family: Georgia, 'Times New Roman', Times, serif; /* Tipo de fuente utilizado para el texto */
     background: linear-gradient(to right, #9900ff, #003cff); /* Fondo de degradado */
